samples/_failures_safe/1761515913_701a67_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_101d7c40.c: In function ‘main’:
./samples/SAFE/__tmp_101d7c40.c:179:5: error: expected declaration or statement at end of input
  179 |     char input[256];
      |     ^~~~
